--- a/institute-app/institute-frontend/staticwebapp.config.json
+++ b/institute-app/institute-frontend/staticwebapp.config.json
@@ -2,6 +2,7 @@
   "routes": [
     {
       "route": "/api/*",
+      "allowedRoles": ["anonymous"],
       "rewrite": "https://institute-backend.azurewebsites.net/api/*"
     }
   ]
