added navigation fallback to staticwebapp.config

--- a/institute-app/institute-frontend/public/staticwebapp.config.json
+++ b/institute-app/institute-frontend/public/staticwebapp.config.json
@@ -5,5 +5,9 @@
       "allowedRoles": ["anonymous"],
       "rewrite": "https://institute-backend.azurewebsites.net/api/*"
     }
-  ]
+  ],
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/api/*"]
+  }
 }
